---
source: mdt_cli/tests/snapshots.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpoojgS2
    - doctor
    - "--format"
    - json
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
{
  "ok": true,
  "summary": {
    "pass": 8,
    "warn": 1,
    "fail": 0,
    "skip": 2
  },
  "checks": [
    {
      "id": "config_discovery",
      "title": "Config Discovery",
      "status": "warn",
      "message": "no config file found (using defaults)",
      "hint": "create `mdt.toml`, `.mdt.toml`, or `.config/mdt.toml` to define data and scan rules"
    },
    {
      "id": "data_sources",
      "title": "Data Sources",
      "status": "skip",
      "message": "skipped because no valid config was loaded",
      "hint": "add a config file to enable explicit data source validation"
    },
    {
      "id": "template_layout",
      "title": "Template Layout",
      "status": "pass",
      "message": "using default template discovery (`*.t.md`)",
      "hint": null
    },
    {
      "id": "duplicate_providers",
      "title": "Duplicate Providers",
      "status": "pass",
      "message": "provider names are unique",
      "hint": null
    },
    {
      "id": "orphan_consumers",
      "title": "Orphan Consumers",
      "status": "pass",
      "message": "every consumer block has a provider",
      "hint": null
    },
    {
      "id": "unused_providers",
      "title": "Unused Providers",
      "status": "pass",
      "message": "all providers have at least one consumer",
      "hint": null
    },
    {
      "id": "parser_diagnostics",
      "title": "Parser Diagnostics",
      "status": "pass",
      "message": "no parser diagnostics found",
      "hint": null
    },
    {
      "id": "consumer_sync",
      "title": "Consumer Sync",
      "status": "pass",
      "message": "every linked consumer renders and is up to date",
      "hint": null
    },
    {
      "id": "cache_artifact",
      "title": "Cache Artifact",
      "status": "pass",
      "message": "cache artifact is readable and valid at [TEMP_DIR]/.mdt/cache/index-v2.json",
      "hint": null
    },
    {
      "id": "cache_hash_mode",
      "title": "Cache Hash Mode",
      "status": "pass",
      "message": "content-hash verification disabled (mtime + size fingerprints only)",
      "hint": "set `MDT_CACHE_VERIFY_HASH=1` to validate cache keys with content hashes while troubleshooting"
    },
    {
      "id": "cache_efficiency",
      "title": "Cache Efficiency",
      "status": "skip",
      "message": "insufficient history for trend analysis (need at least 3 scans)",
      "hint": null
    }
  ]
}

----- stderr -----
